--- a/index.html
+++ b/index.html
@@ -681,6 +681,11 @@ footer p { line-height: 1.8; }
 'use strict';
 
 // ═══════════════════════════════════════════════════════════════════════════
+// CONFIG — point this at your Vercel backend
+// ═══════════════════════════════════════════════════════════════════════════
+const API_BASE = 'https://baseball-backend-five.vercel.app';
+
+// ═══════════════════════════════════════════════════════════════════════════
 // STATE LOOKUP TABLES
 // ═══════════════════════════════════════════════════════════════════════════
 const STATE_NAMES = {
@@ -743,7 +748,7 @@ function esc(str) {
  * Returns: { success, state, total, teams: [...] }
  */
 async function fetchTeams(stateAbbr) {
-  const url = `/api/teams?state=${encodeURIComponent(stateAbbr)}`;
+  const url = `${API_BASE}/api/teams?state=${encodeURIComponent(stateAbbr)}`;
   const res = await fetch(url);
 
   // Try to parse JSON even on error responses
@@ -778,7 +783,7 @@ function renderTeams(grid, teams, stateName) {
       <div class="no-teams">
         <strong>No teams found in ${esc(stateName)}</strong>
         There are currently no teams listed for this state in your GHL database.<br>
-        Make sure records have the <strong>State</strong> field filled in with <strong>${esc(stateName.slice(0,2).toUpperCase())}</strong>.
+        Make sure records have the <strong>State</strong> field filled in with the correct 2-letter abbreviation.
       </div>`;
     return;
   }
